--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ rust-version = "1.83"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [workspace.dependencies]
+clap = { version = "4.5", features = ["derive"] }
+tracing = "0.1"
+tracing-subscriber = "0.3"
 
 # Workspace members
 transaction = { path = "./transaction" }
