--- a/transaction/Cargo.toml
+++ b/transaction/Cargo.toml
@@ -8,5 +8,6 @@ rust-version.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = { workspace = true, features = ["io-std", "io-util"] } # "macros", "fs", "rt", "sync", "time"
 
 [dev-dependencies]
