--- a/payment-engine/Cargo.toml
+++ b/payment-engine/Cargo.toml
@@ -7,6 +7,7 @@ rust-version.workspace = true
 
 [dependencies]
 clap = { workspace = true, features = ["wrap_help"] } # "env"
+tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 tracing.workspace = true
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 
