--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ rust-version = "1.83"
 
 [workspace.dependencies]
 clap = { version = "4.5", features = ["derive"] }
+csv-async = { version = "1.3", features = ["tokio"] }
+futures = "0.3"
 tokio = "1.41"
 tracing = "0.1"
 tracing-subscriber = "0.3"
