--- a/transaction/Cargo.toml
+++ b/transaction/Cargo.toml
@@ -10,6 +10,7 @@ rust-version.workspace = true
 [dependencies]
 csv-async.workspace = true
 futures.workspace = true
+serde.workspace = true
 thiserror.workspace = true
 tokio = { workspace = true, features = ["fs", "io-std", "io-util"] } # "macros", "rt", "sync", "time"
 tracing.workspace = true
