--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ thiserror = "2.0"
 tokio = "1.41"
 tracing = "0.1"
 tracing-subscriber = "0.3"
+tracing-test = "0.2"
 
 # Workspace members
 transaction = { path = "./transaction" }
