--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ rust-version = "1.83"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [workspace.dependencies]
+assert_matches = "1.5"
 clap = { version = "4.5", features = ["derive"] }
 csv-async = { version = "1.3", features = ["tokio"] }
 futures = "0.3"
